# student-applications

./: .gitmodules  alpha_delta_lhs_10.csv  alpha_delta_lhs_20.csv  alpha_delta_lhs_40.csv  alpha_delta_lhs_5.csv  alpha_delta_results10.csv  alpha_delta_results20.csv  alpha_delta_results40.csv  alpha_delta_results5.csv  alpha_gamma_gauss_results10.csv  alpha_gamma_gauss_results20.csv  alpha_gamma_gauss_results40.csv  alpha_gamma_gauss_results5.csv  alpha_gamma_lhs_10.csv  alpha_gamma_lhs_20.csv  alpha_gamma_lhs_40.csv  alpha_gamma_lhs_5.csv  alpha_gamma_results10.csv  alpha_gamma_results20.csv  alpha_gamma_results40.csv  alpha_gamma_results5.csv  beta.py  beta_gamma_cubic_results10.csv  beta_gamma_cubic_results20.csv  beta_gamma_cubic_results40.csv  beta_gamma_lhs_10.csv  beta_gamma_lhs_20.csv  beta_gamma_lhs_40.csv  beta_gamma_lhs_5.csv  beta_gamma_results5.csv  generate_alpha_delta_lhs.py  generate_alpha_gamma_lhs.py  generate_beta_gamma.py  rbf_alpha_beta5.py  rbf_alpha_beta_gamma5.py  rbf_alpha_delta.py  rbf_alpha_gamma.py  rbf_beta_gamma.py  rbf_gauss_alpha_gamma.py  rbf_gauss_beta_gamma.py  (+18 more)
2023-2024/PMP-42/bachelor-thesis/Vynnychuk Anastasiia/ga-segmentation/: CMakeLists.txt
2023-2024/PMP-42/bachelor-thesis/Vynnychuk Anastasiia/ga-segmentation/include/: base.h  ga.h  utils.h
2023-2024/PMP-42/bachelor-thesis/Vynnychuk Anastasiia/ga-segmentation/src/: base.cpp  ga.cpp  main.cpp  utils.cpp
2024-2025/PMP-32/coursework/Anhelina Modenko/: CMakeLists.txt
2024-2025/PMP-32/coursework/Anhelina Modenko/include/shaders/: cube.geom  delaunay.frag  delaunay.geom  delaunay.vert  line.comp  line.geom  marching.frag  marching.geom  marching.vert  normal.frag  normal.geom  normal.vert  sphere.geom  sphere.vert  white.frag
2024-2025/PMP-32/coursework/Anhelina Modenko/src/: buffer_object.h  camera.h  csv_reader.h  cube.h  delaunay_mesh_generator.h  ebo.h  element.h  env.h  frame_counter.h  function_scalar_field.h  keyboard.h  landmark_point.h  line_segment.h  line_segment_buffer.h  marching_cubes.h  marching_lookup_table.h  mesh.h  mesh_generator.h  mouse.h  npy_reader.h  object_controller.h  point.h  renderer_manager.h  shader.h  shared_ref.h  sphere.h  sphere_buffer.h  sphere_scalar_field.h  types.h  ubo.h  vao.h  vbo.h
2025-2026/PMPm-12/coursework/Serbulov Artem/: .env.template  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
2025-2026/PMPm-12/coursework/Serbulov Artem/.devcontainer/: Dockerfile  devcontainer.json  postCreate.sh
2025-2026/PMPm-12/coursework/Serbulov Artem/.github/: copilot-instructions.md
2025-2026/PMPm-12/coursework/Serbulov Artem/results/: detection_metrics_best.json  detection_metrics_edge.json  detection_metrics_vanilla.json  visdrone_tracking_metrics_best.json  visdrone_tracking_metrics_edge.json
2025-2026/PMPm-12/coursework/Serbulov Artem/results/det_eval6/: predictions.json
2025-2026/PMPm-12/coursework/Serbulov Artem/results/det_eval7/: predictions.json
2025-2026/PMPm-12/coursework/Serbulov Artem/results/visdrone_tracking/: uav0000009_03358_v.txt  uav0000073_00600_v.txt  uav0000073_04464_v.txt  uav0000077_00720_v.txt  uav0000088_00290_v.txt  uav0000119_02301_v.txt  uav0000120_04775_v.txt  uav0000161_00000_v.txt  uav0000188_00000_v.txt  uav0000201_00000_v.txt  uav0000249_00001_v.txt  uav0000249_02688_v.txt  uav0000297_00000_v.txt  uav0000297_02761_v.txt  uav0000306_00230_v.txt  uav0000355_00001_v.txt  uav0000370_00001_v.txt
2025-2026/PMPm-12/coursework/Serbulov Artem/src/: config.py  dataset.py  tiling.py
2025-2026/PMPm-12/coursework/Serbulov Artem/src/modeling/: benchmark.py  dataset_utils.py  detector.py  evaluate.py  evaluate_det_track.py  (+6 more)
2025-2026/PMPm-12/coursework/Serbulov Artem/tests/: test_data.py
(+2169 files in other folders)
